# rumpy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bench_stream14.py  pyproject.toml
benchmarks/: bench_array_methods.py  bench_bitwise.py  bench_image.py  bench_indexing.py  bench_io.py  bench_linalg.py  bench_micro.py  bench_ml.py  bench_nan.py  bench_signal.py  bench_simulation.py  bench_sorting.py  bench_statistics.py  bench_timeseries.py  bench_ufuncs.py  benchmark_stream11.py  run.py
designs/: adding-operations.md  array-memory.md  backstride-iteration.md  deviations.md  dtype-system.md  elision.md  expression-problem.md  gufuncs.md  iteration-performance.md  kernel-dispatch.md  linalg.md  random.md  strided-loops.md  testing.md  ufuncs.md
examples/: capi_example.c
plans/: backstride-iteration.md  benchmarks.md  current.md  dtype-refactor.md  expression-problem-refactor.md  f64-generalization.md  initial.md  known-issues.md  numpy-api-parity.md  performance-p0.md  performance.md  phase12-comparison.md  roadmap.md  strided-iterator.md  strided-loops.md  testing-redesign.md  ufunc-dispatch.md
src/: lib.rs
tests/: conftest.py  helpers.py  test_aliases.py  test_arange.py  test_array_methods.py  test_asarray.py  test_binary.py  test_binary_math.py  test_bitwise.py  test_broadcast.py  test_capi.py  test_capi_compat.py  test_char.py  test_comparison.py  test_constructors.py  test_creation.py  test_datetime.py  test_dot.py  test_dtype_interactions.py  test_dtypes.py  test_einsum.py  test_elision.py  test_emath.py  test_fancy_indexing.py  test_fft.py  test_io.py  (+37 more)
(+101 files in other folders)
