[package]
name = "rumpy"
version = "0.1.0"
edition = "2021"

[lib]
name = "rumpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods"] }
bitflags = "2.6"
faer = { version = "0.20", features = ["rayon"] }
rand_pcg = "0.9"
rand_core = "0.9"
half = "2.4"
rustfft = "6.2"
